@@ -1,3 +1,6 @@
+2011-09-02 <fumiyas at OSS Technology, Inc., Japan>
+	* smbldap-config: Rename from configure.pl
+
 2011-07-23 <fumiyas at OSS Technology, Inc., Japan>
 	* smbldap-populate: Create all node entries if $config{usersdn}
 	  (and/or others) has multiple nodes under $config{suffix}
